@@ -150,7 +150,12 @@ nr_lgradient_render_R8G8B8A8N (NRLGradientRenderer *lgr, unsigned char *px, int 
 			}
 			/* Full composition */
 			s = lgr->vector + 4 * idx;
-			if (s[3] != 0) {
+			if (s[3] == 255) {
+				d[0] = s[0];
+				d[1] = s[1];
+				d[2] = s[2];
+				d[3] = 255;
+			} else if (s[3] != 0) {
 				ca = 65025 - (255 - s[3]) * (255 - d[3]);
 				d[0] = NR_COMPOSENNN_A7 (s[0], s[3], d[0], d[3], ca);
 				d[1] = NR_COMPOSENNN_A7 (s[1], s[3], d[1], d[3], ca);
@@ -429,6 +434,42 @@ nr_rgradient_render_generic_symmetric (NRRGradientRenderer *rgr, NRPixBlock *pb)
 				d[1] = NR_COMPOSENPP (s[1], s[3], d[1], d[3]);
 				d[2] = NR_COMPOSENPP (s[2], s[3], d[2], d[3]);
 				d[3] = (65025 - (255 - s[3]) * (255 - d[3]) + 127) / 255;
+				d += 4;
+				gx += dx;
+				gy += dy;
+			}
+		}
+	} else if (pb->mode == NR_PIXBLOCK_MODE_R8G8B8A8N) {
+		for (y = pb->area.y0; y < pb->area.y1; y++) {
+			double gx, gy;
+			d = NR_PIXBLOCK_PX (pb) + (y - pb->area.y0) * pb->rs;
+			gx = rgr->px2gs.c[0] * pb->area.x0 + rgr->px2gs.c[2] * y + rgr->px2gs.c[4];
+			gy = rgr->px2gs.c[1] * pb->area.x0 + rgr->px2gs.c[3] * y + rgr->px2gs.c[5];
+			for (x = pb->area.x0; x < pb->area.x1; x++) {
+				double pos;
+				pos = hypot (gx, gy);
+				if (rgr->spread == NR_GRADIENT_SPREAD_REFLECT) {
+					idx = ((int) pos) & NRG_2MASK;
+					if (idx > NRG_MASK) idx = NRG_2MASK - idx;
+				} else if (rgr->spread == NR_GRADIENT_SPREAD_REPEAT) {
+					idx = ((int) pos) & NRG_MASK;
+				} else {
+					idx = CLAMP (((int) pos), 0, NRG_MASK);
+				}
+				s = rgr->vector + 4 * idx;
+				if (s[3] == 255) {
+					d[0] = s[0];
+					d[1] = s[1];
+					d[2] = s[2];
+					d[3] = 255;
+				} else if (s[3] != 0) {
+					unsigned int ca;
+					ca = 65025 - (255 - s[3]) * (255 - d[3]);
+					d[0] = NR_COMPOSENNN_A7 (s[0], s[3], d[0], d[3], ca);
+					d[1] = NR_COMPOSENNN_A7 (s[1], s[3], d[1], d[3], ca);
+					d[2] = NR_COMPOSENNN_A7 (s[2], s[3], d[2], d[3], ca);
+					d[3] = (ca + 127) / 255;
+				}
 				d += 4;
 				gx += dx;
 				gy += dy;
