@@ -1,5 +1,12 @@
 2003-02-08  Lauris Kaplinski  <lauris@kaplinski.com>
 
+	* src/libnr/nr-gradient.c (nr_rgradient_render_generic_symmetric): Special
+	case NR_PIXBLOCK_MODE_R8G8B8A8N and full opacity
+
+	* src/sp-gradient.c (sp_radialgradient_set): Initialize focal point to center if unset
+
+	* src/libnr/nr-gradient.c (nr_lgradient_render_R8G8B8A8N): Special-cased full opacity
+
 	* configure.in: 0.30.1
 
 	* src/libnrtype/nr-rasterfont.c (nr_rasterfont_ensure_glyph_slot): Use
